Fix citation formatting in ENERGY WALL IAE.ipynb

--- a/ENERGY WALL IAE.ipynb
+++ b/ENERGY WALL IAE.ipynb
@@ -31,7 +31,7 @@
     "Pour calibrer notre modèle à $t=0$ (2024), nous nous appuyons sur les rapports de référence suivants :\n",
     "\n",
     "#### 1. Consommation Électrique (Baseline)\n",
-    "* [cite_start]**Source :** [Agence Internationale de l'Énergie (IEA) - Electricity 2024 Report](https://www.iea.org)[cite: 56].\n",
+    "*  **Source :** [Agence Internationale de l'Énergie (IEA) - Electricity 2024 Report](https://www.iea.org)[cite: 56].\n",
     "* **Donnée :** La consommation mondiale des Data Centers est estimée à **460 TWh** en 2022.\n",
     "* **Hypothèse :** La part spécifique de l'IA est estimée à ~10% de ce total en 2024 (soit ~46 TWh), mais avec une croissance exponentielle supérieure au reste de l'IT.\n",
     "\n",
@@ -41,8 +41,8 @@
     "* **Dynamique :** Nous intégrons une amélioration de l'efficacité de 15% à 50% par an selon les scénarios (Loi de Koomey).\n",
     "\n",
     "#### 3. Environnement (Carbone & Eau)\n",
-    "* [cite_start]**CO2 :** Intensité carbone mondiale moyenne de **436 gCO2/kWh** ([Source: World Bank / IEA](https://climateknowledgeportal.worldbank.org))[cite: 64].\n",
-    "* [cite_start]**Eau :** Le WUE (Water Usage Effectiveness) moyen industriel est de **1.8 L/kWh** ([Source: The Shift Project](https://theshiftproject.org))[cite: 71]."
+    "*  **CO2 :** Intensité carbone mondiale moyenne de **436 gCO2/kWh** ([Source: World Bank / IEA](https://climateknowledgeportal.worldbank.org))[cite: 64].\n",
+    "*  **Eau :** Le WUE (Water Usage Effectiveness) moyen industriel est de **1.8 L/kWh** ([Source: The Shift Project](https://theshiftproject.org))[cite: 71]."
    ]
   },
   {
